# tin

./: Cargo.toml  README.md  build.rs
.circleci/: codecov.sh  config.yml  install-coverage.sh  install.sh
fuzz/: Cargo.toml
fuzz/fuzzers/: parse.rs
norm-ir-fuzz-target/: Cargo.toml
norm-ir-fuzz-target/in/: captures.norm
norm-ir-fuzz-target/src/: main.rs
norm-parser-fuzz-target/: Cargo.toml
norm-parser-fuzz-target/out.old/: .cur_input
norm-parser-fuzz-target/src/: main.rs
specs-visitor/: Cargo.toml
specs-visitor-derive/: Cargo.toml
specs-visitor-derive/src/: lib.rs  tests.rs
specs-visitor/src/: lib.rs
src/: ast.rs  best_iter.rs  builtin.rs  compiler.rs  db.rs  diagnostic.rs  error.rs  graph.rs  interpreter.rs  ir.rs  jit.rs  lib.rs  module.rs  test_util.rs  value.rs
src/ast/: ast_node.rs  map_context.rs  mod.rs  node.rs  visitor.rs
src/codegen/: abi_type.rs  builtin.rs  data.rs  error.rs  function.rs  mod.rs  module.rs  tests.rs  translation.rs  util.rs
src/interpreter/: db.rs  error.rs  macros.rs  mod.rs
src/ir/: builder.rs  compiler.rs  db.rs  element.rs  error.rs  graph.rs  jit_compiler.rs  location.rs  mod.rs  symbol.rs  tests.rs  world.rs
src/ir/component/: constexpr.rs  element.rs  layout.rs  location.rs  mod.rs  replacement.rs  scope.rs  symbol.rs  ty.rs
src/ir/component/constexpr/: error.rs  mod.rs
src/ir/component/ty/: class.rs  error.rs  mod.rs
src/ir/system/: apply_replacements.rs  assign_element.rs  delete_replaced_entities.rs  infer_constexpr.rs  infer_layouts.rs  infer_types.rs  mod.rs  resolve_references.rs
src/layout/: db.rs  error.rs  infer.rs  mod.rs
src/parser/: mod.rs  norm.lalrpop  rules.rs  tin.lalrpop  util.rs
src/source/: db.rs  mod.rs
src/syntax/: db.rs  mod.rs
src/syntax/ast/: ast_node.rs  map_context.rs  mod.rs
src/syntax/parser/: grammar.lalrpop  mod.rs  util.rs
src/ty/: class.rs  db.rs  error.rs  infer.rs  mod.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  kind.rs  lib.rs  parser.rs  token.rs
testdata/err/: bool_op_on_ints.err.txt  bool_op_on_ints.tn  call_on_non_function.err.txt  call_on_non_function.tn  closure_type_mismatch.err.txt  closure_type_mismatch.tn  constexpr_div_by_zero.err.txt  constexpr_div_by_zero.tn  div_by_zero.err.txt  div_by_zero.tn  garbage.err.txt  garbage.tn  integer_literal_overflow.err.txt  integer_literal_overflow.tn  select_on_non_record.err.txt  select_on_non_record.tn  string_literal_bad_escape_sequence.err.txt  string_literal_bad_escape_sequence.tn  string_literal_bad_unicode.err.txt  string_literal_bad_unicode.tn  string_literal_unterminated_unicode.err.txt  string_literal_unterminated_unicode.tn  string_literal_unterminated_unicode_end.err.txt  string_literal_unterminated_unicode_end.tn
testdata/ok/: calls.tn  minimal.tn  operator_mess.tn
tests/: integration_tests.rs
tin-fuzz-target/: Cargo.toml  convert-to-tests.sh  run.sh
tin-fuzz-target/src/: main.rs
tin-ir-fuzz-target/: Cargo.toml
tin-ir-fuzz-target/in/: typeless.tn
tin-ir-fuzz-target/src/: main.rs
tin-parser-fuzz-target/: Cargo.toml
tin-parser-fuzz-target/in/: main.tn
tin-parser-fuzz-target/src/: main.rs
