[package]
name = "tin"
description = "tin: a statically structurally typed embeddable programming language"
license = "MIT"
version = "0.3.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
repository = "https://github.com/dflemstr/tin"
edition = "2018"

[build-dependencies]
lalrpop = "0.16.2"
failure = "0.1.5"
regex = "1.1.0"
walkdir = "2.2.7"

[dependencies]
cranelift = "0.26.0"
cranelift-module = "0.26.0"
cranelift-simplejit = "0.26.0"
dot = "0.1.4"
env_logger = "0.6.0"
failure = "0.1.5"
lalrpop-util = "0.16.2"
log = "0.4.6"
regex = "1.1.0"
specs = { version = "0.14.3", default_features = false }
specs-derive = "0.4.0"
specs-visitor-derive = { version = "0.3.0", path = "specs-visitor-derive" }
specs-visitor = { version = "0.3.0", path = "specs-visitor", default_features = false }
pretty_env_logger = "0.3.0"
structopt = "0.2.14"
lazy_static = "1.2.0"
byteorder = "1.2.7"
rayon = { version = "1.0.3", optional = true }
itertools = "0.8.0"
codespan = "0.2.0"
codespan-reporting = "0.2.0"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.6"

[features]
default = ["parallel"]
nightly = ["specs/nightly"]
parallel = ["rayon", "specs/parallel", "specs-visitor/parallel"]
test-render-graphs = []

[profile.release]
debug = true
lto = true
codegen-units = 1

[workspace]
members = ["specs-visitor", "specs-visitor-derive", "tin-fuzz-target"]

[dev-dependencies]
pretty_assertions = "0.5.1"

[dev-dependencies.cargo-husky]
git = "https://github.com/dflemstr/cargo-husky.git"
branch = "run-for-all"
features = ["prepush-hook", "precommit-hook", "run-for-all", "run-cargo-test", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
