[package]
name = "tin"
description = "tin: a statically structurally typed embeddable programming language"
license = "MIT"
version = "0.3.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
repository = "https://github.com/dflemstr/tin"
edition = "2018"

[build-dependencies]
lalrpop = "0.17.1"
failure = "0.1.5"
regex = "1.2.0"
walkdir = "2.2.9"

[dependencies]
cranelift = "0.37.0"
cranelift-module = "0.37.0"
cranelift-simplejit = "0.37.0"
dot = "0.1.4"
env_logger = "0.6.2"
failure = "0.1.5"
lalrpop-util = "0.17.1"
log = "0.4.7"
regex = "1.2.0"
pretty_env_logger = "0.3.0"
structopt = "0.2.18"
lazy_static = "1.3.0"
byteorder = "1.3.2"
itertools = "0.8.0"
codespan = "0.3.0"
codespan-reporting = "0.3.0"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.8"
salsa = "0.12.3"
relative-path = "0.4.0"
ordered-float = "1.0.2"
cranelift-native = "0.37.0"

[features]
default = ["parallel"]
nightly = []
parallel = []
test-render-graphs = []

[profile.release]
debug = true
lto = true
codegen-units = 1

#[workspace]
#members = ["syntax"]

[dev-dependencies]
pretty_assertions = "0.6.1"

[dev-dependencies.cargo-husky]
version = "1.4.0"
features = ["prepush-hook", "precommit-hook", "run-for-all", "run-cargo-test", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
