[package]
name = "specs-visitor-derive"
description = "A procedural macro for deriving traits in specs-derive."
license = "MIT"
version = "0.2.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
repository = "https://github.com/dflemstr/tin"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.10.1"
quote = "0.6.10"
proc-macro2 = "0.4.24"

[dev-dependencies]
specs = "0.14.3"
specs-visitor = { version = "0.2.0", path = "../specs-visitor" }
