[package]
name = "specs-visitor"
description = "Utilities for visiting entities in an ECS that is using the specs library."
license = "MIT"
version = "0.1.1"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
repository = "https://github.com/dflemstr/tin"
edition = "2018"

[dependencies]
specs = "0.14.1"
rayon = "1.0.3"
