[package]
name = "specs-visitor"
description = "Utilities for visiting entities in an ECS that is using the specs library."
license = "MIT"
version = "0.2.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
repository = "https://github.com/dflemstr/tin"
edition = "2018"

[dependencies]
specs = { version = "0.14.3", default_features = false }
rayon = { version = "1.0.3", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon", "specs/parallel"]
test-render-graphs = []
